@@ -1,3 +1,8 @@
+2009-08-05  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-fancy-inspector.lisp (emacs-inspect): add buttons for removing
+	 compiler-macros and unbinding variables.
+
 2009-07-22  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-fuzzy.lisp (fuzzy-convert-matching-for-emacs): format
